--- a/style.css
+++ b/style.css
@@ -1,32 +1,71 @@
 .menu{
   display: flex;
   justify-content: space-between;
-  background-color: black;
+  background-color: #AB4D08;
   font-size: 20px;
   font-family: sans-serif;
   font-weight: 400;
   color: white;
 }
 body{
-  background-color:whitesmoke;
-  
+  background-color:#30B6BC;
+  margin: 10px;
+}
+a:link{
+  color: white;
+}
+a:visited{
+  color: yellow;
 }
 .grid{
   display: flex;
   flex-wrap: wrap;
   font-family: sans-serif;
-  
+  background-color:#30B6BC;
 }
 .grid img{
-  border: 2px solid black;
+  border: 2px solid #23AB08;
   border-radius: 50px;
 }
 .origami {
   
   border-radius: 20px;
-  background-color: white;
+  background-color: #EAABAB;
   
   width:310px;
   font-family: fantasy;
   
+}
+.bodyimg{
+  position: relative;
+} 
+.bodyimg p{
+  color: blue;
+  font-size: 55px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.bodyimg h3{
+  color:black;
+  font-family: fantasy;
+  font-size: 30px;
+  width: 1200px;
+  position: absolute;
+  top: 40%;
+  left: 45%;
+  transform: translate(-40%,-40%);
+}
+.origami{
+  border-radius: 20px;
+  background-color: cornsilk;
+  padding:30px;
+  margin:40px;
+  width:330px;
+  font-family: cursive;
+}
+.origami:hover{
+  transform: scale(1.2);
 }
